# train-ticketing-system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
diagrams/: structure_chart.drawio
include/: cli.h  member.h  recovery_mail.h  schedule.h  staff.h  stations.h  ticket.h  tui.h  utils.h
include/openssl/include/openssl/: configuration.h
include/openssl/lib/: libcrypto.lib  libssl.lib
include/openssl/ssl/: fipsmodule.cnf
include/schedule/: graph.h  schedule.h  stations.h
include/tui/: main_menu.h  member_menu.h  scheduling_menu.h  staff_menu.h  start_menu.h  tui_common.h  tui_utils.h
include/tui/form/: feedback_form.h  forgot_password_form.h  form.h  login_form.h  member_details_form.h  member_register_form.h  register_form.h  register_member_form.h  register_staff_form.h  schedule_details_form.h  schedule_form.h  staff_details_form.h
include/tui/menu/: int_menu.h  member_menu.h  menu.h  seat_menu.h  staff_menu.h
include/tui/table/: member_ticket_table.h  schedule_table.h  staff_schedule_table.h  staff_table.h  table.h
include/tui/template/: form.h  login_form.h  login_menu.h
include/tui/utils/: menu_utils.h  tui_utils.h
src/: main.c  member.c  recovery_mail.c  schedule.c  staff.c  staff_registration.c  stations.c  ticket.c  tui.c  tui_utils.c  utils.c
src/schedule/: generate.c  graph.c  schedule.c  stations.c
src/tui/: main_menu.c  member_menu.c  menu_utils.c  scheduling_menu.c  staff_menu.c  start_member_menu.c  start_menu.c  start_schedule_menu.c  start_staff_menu.c  tui_last_pos.c  tui_utils.c
src/tui/form/: feedback_form.c  forgot_password_form.c  form.c  login_form.c  member_details_form.c  member_register_form.c  register_form.c  register_member_form.c  register_staff_form.c  schedule_details_form.c  schedule_form.c  staff_details_form.c
src/tui/menu/: int_menu.c  member_menu.c  menu.c  seat_menu.c  staff_menu.c
src/tui/table/: member_ticket_table.c  schedule_table.c  staff_schedule_table.c  staff_table.c  table.c
src/tui/template/: form.c  login_form.c  login_menu.c
src/tui/utils/: menu_utils.c  tui_last_pos.c  tui_utils.c
